2002-06-21 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/struct.h: Added new file to hold gsymcheck specific 
	structures

	* src/s_check.c, s_symstruct.c: Added #include for above

	* src/*.c: Went through and re-indented most functions
	
	* src/*.c: Started expanding tests to include missing pinseq,
	missing pinnumber, found old pin/slot attributes. (not completely
	done; some functions stubbed)

	* src/globals.c: Added s_update_log function so that we can log
	s_log_messages

	* src/*.c: Changed all fprintfs to s_log_messages

	* src/gsymcheck.c: Cleanup in main_prog, don't load files which
	don't exist

	* src/s_check.c: Minor reorg, refactoring some of the functions
	
2002-06-09 Ales Hvezda   <ahvezda@geda.seul.org>

        * src/g_rc.c, gnetlist.c: Added a call to u_basic_strip_trailing to
        fix the network timeout problem on WinME

2002-05-27 Ales Hvezda   <ahvezda@geda.seul.org>

	 * lib/system-gschemrc.in: Fixed incorrect environment variable name
        "GEDADATARC" to be GEDADATA.

        * src/g_rc.c, g_register.c, i_vars.c, s_project.c: Added the missing
        bitmap-directory keyword

        * src/g_rc.c: A few more fixes for the mingw32 port.

2002-04-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Changed the function which is search for libpng.
	This was needed for the win32 port.

2002-04-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: oops had the wrong order of things for MINGW32. fixed.

2002-04-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in and friends: More work on getting the upgrade of 
	autoconf, automake, and libtool to behave correctly.

	* configure.in: Added PATHSEP variable which holds the proper path
	separater depending on the platform.

	* lib/system-*.in: Work on getting rc files to use above variable.

	* src/g_rc.c: Got rid of any left of /'s and replaced them with the
	appropriate #defines

2002-04-01 Ales Hvezda   <ahvezda@geda.seul.org>
