@@ -32,6 +32,7 @@ void s_check_graphical(OBJECT *o_current, SYMCHECK *s_current);
 int s_check_device(OBJECT *o_current, SYMCHECK *s_current);
 void s_check_pinnumber(OBJECT *object_head, SYMCHECK *s_current);
 void s_check_pinseq(OBJECT *object_head, SYMCHECK *s_current);
+void s_check_slotdef(OBJECT *object_head, SYMCHECK *s_current);
 void s_check_oldpin(OBJECT *object_head, SYMCHECK *s_current);
 void s_check_oldslot(OBJECT *object_head, SYMCHECK *s_current);
 /* s_project.c */
